--- a/templates/laws.html
+++ b/templates/laws.html
@@ -58,8 +58,8 @@
     polygonSeries.mapPolygons.template.strokeWidth = 0.5;
     
     // Exclude Antartica
-    polygonSeries.exclude = ["AQ"];
-    //['AR','AU','BR','BS','CA','CO','CZ','DK','EE','FI','FR','DE','GR','HU','IS','IE','IN','IT','JP','LV','LU','MT','MA','NZ','NO','PH','PL','PT','RO','RU','SI','ZA','KR','ES','CH','TW','GB','US']
+    //polygonSeries.exclude = ["AQ"];
+    polygonSeries.include = ['AR','AU','BR','BS','CA','CO','CZ','DK','EE','FI','FR','DE','GR','HU','IS','IE','IN','IT','JP','LV','LU','MT','MA','NZ','NO','PH','PL','PT','RO','RU','SI','ZA','KR','ES','CH','TW','GB','US']
     //['Argentina', 'Australia', 'Brazil', 'Bahamas', 'Canada', 'Columbia', 'Czech Republic', 'Denmark', 'Estonia', 'Estonia', 'European Union', 'Finland', 'France', 'Germany', 'Greece', 'Hong Kong', 'Hungary', 'Iceland', 'Ireland', 'India', 'Italy', 'Japan', 'Latvia', 'Luxemborg', 'Malta', 'Mexico', 'Morocco', 'New Zealand', 'Norway', 'The Philippines', 'Poland', 'Portugal', 'Romania', 'Russia', 'Slovenia', 'South Africa', 'South Korea', 'Spain', 'Switzerland', 'Taiwan', 'United Kingdom', 'United State']
     // Make map load polygon (like country names) data from GeoJSON
     polygonSeries.useGeodata = true;
