--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -47,24 +47,28 @@
 <body>
     <p class="heading"> Analysis </p>
     <div id="textbox" style="clear: both;">
-        <p class="alignleft">PARAMETER 1</p>
-        <p class="alignright">VALUE</p>
+        <p class="alignleft">Uses Cookies</p>
+        <p class="alignright">{{data.q1}}</p>
       </div>
       <div id="textbox" style="clear: both;">
-        <p class="alignleft">PARAMETER 2</p>
-        <p class="alignright">VALUE</p>
+        <p class="alignleft">Uses and shares Personal data</p>
+        <p class="alignright">{{data.q2}}</p>
       </div>
       <div id="textbox" style="clear: both;">
-        <p class="alignleft">PARAMETER 3</p>
-        <p class="alignright">VALUE</p>
+        <p class="alignleft">Store data anywhere around the world </p>
+        <p class="alignright">{{data.q3}}</p>
       </div>
       <div id="textbox" style="clear: both;">
-        <p class="alignleft">PARAMETER 4</p>
-        <p class="alignright">VALUE</p>
+        <p class="alignleft">Website does not track you </p>
+        <p class="alignright">{{data.q4}}</p>
       </div>
       <div id="textbox" style="clear: both;">
-        <p class="alignleft">PARAMETER 5</p>
-        <p class="alignright">VALUE</p>
+        <p class="alignleft">Flesch Readbility Score</p>
+        <p class="alignright">{{data.read_score}}</p>
+      </div>
+      <div id="textbox" style="clear: both;">
+        <p class="alignleft">Overall Score</p>
+        <p class="alignright">{{data.overall_score}}</p>
       </div>
       
       <button class="leftbutton">Detailed Analysis</button>
