--- a/templates/laws.html
+++ b/templates/laws.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div id="chartdiv"></div>
-    <div id = "laws">
+    <h2 style="color: white">Privacy Laws </h2>
+    <div id = "laws" style="color: white">
 
         <!-- {% for i in data %}
         <span>{{i.country}}</span>
