--- a/templates/mainlaws.html
+++ b/templates/mainlaws.html
@@ -73,7 +73,7 @@
         <ul>
             <li><a href="{% url 'laws' %}">Law Map</a></li>
             <li><a href="{% url 'index2' %}">Home</a></li>
-            <li><a href="#">Menu 3</a></li>
+            <li><a href="{% url 'sitebreach' %}">News</a></li>
             <li><a href="#">Menu 4</a></li>
         </ul>
     </nav>
