--- a/static/landing.css
+++ b/static/landing.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Proza+Libre:wght@700&family=Red+Hat+Display:wght@700&display=swap");
 body {
   background-color: #002233;
   font-family: "Red Hat Display", sans-serif;
 }
-.heading {
+.plum {
   color: white;
   font-size: 76px;
   text-align: center;
@@ -11,6 +12,7 @@ body {
 .mainform {
   display: flex;
   justify-content: center;
+  margin-top: 4%;
 }
 .link {
   width: 800px;
@@ -21,6 +23,7 @@ body {
   font-family: "Red Hat Display";
   font-size: 24px;
   margin-top: -5%;
+  padding: 10px;
 }
 .link:focus {
   outline: none;
@@ -34,6 +37,7 @@ body {
   font-family: "Red Hat Display";
   font-size: 24px;
   margin-top: 3%;
+  padding: 10px;
 }
 .paste:focus {
   outline: none;
@@ -58,4 +62,60 @@ button:hover {
 }
 button:focus {
   outline: none;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+nav {
+  width: 100%;
+  font-weight: bold;
+  font-family: "Red Hat Display", sans-serif;
+  height: 9vh;
+  background-color: rgb(0, 0, 0);
+}
+
+nav ul {
+  height: 100%;
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-right: auto;
+  margin-left: 50%;
+}
+
+nav a {
+  text-transform: uppercase;
+  color: black;
+  font-weight: bold;
+}
+
+nav li {
+  background-color: rgb(187, 165, 165);
+  padding: 7px 20px;
+  border-radius: 10px;
+}
+
+.navheading {
+  font-size: 45px;
+  font-family: "Proza Libre";
+  color: white;
+  float: left;
+  position: absolute;
+  margin-left: 2%;
+}
+.nonblue {
+  color: white;
 }
