--- a/templates/news.html
+++ b/templates/news.html
@@ -34,9 +34,9 @@
             <p class="navheading"><a href="{% url 'index2' %}" class="nonblue"> LIGHT HOUSE</p></a> 
         <ul>
             <li><a href="{% url 'laws' %}">Law Map</a></li>
-            <li><a href="{% url 'index2' %}">Home</a></li>
+            <!-- <li><a href="{% url 'index2' %}">Home</a></li> -->
             <li><a href="{% url 'sitebreach' %}">News</a></li>
-            <li><a href="#">Menu 4</a></li>
+            <li><a href="#">Github</a></li>
         </ul>
     </nav>
         <p class="heading">Search Previous Data Breach</p>
@@ -100,6 +100,6 @@
         <li><a href="https://blog.eccouncil.org/the-importance-of-data-security-and-privacy-for-businesses/" style="color: aliceblue;font-size: 22px;">THE IMPORTANCE OF DATA SECURITY AND PRIVACY FOR BUSINESSES</a></li>
     </ul>
         </div>
-    
+        <br><br><br><br>
     </body>
 </html>
