--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
             <p class="navheading"><a href="{% url 'index2' %}" class="nonblue"> LIGHT HOUSE</p></a> 
         <ul>
             <li><a href="{% url 'laws' %}">Law Map</a></li>
-            <li><a href="{% url 'index2' %}">Home</a></li>
+            <!-- <li><a href="{% url 'index2' %}">Home</a></li> -->
             <li><a href="{% url 'sitebreach' %}">News</a></li>
-            <li><a href="#">Menu 4</a></li>
+            <li><a href="#">Github</a></li>
         </ul>
     </nav>
     <br>
